--- a/YYYYMMDD_AAAA_syarok.tex
+++ b/YYYYMMDD_AAAA_syarok.tex
@@ -15,7 +15,7 @@
 \begin{document}
 \twocolumn[
 \beginheader{令和6年度 コンピュータサイエンス学部 中間発表}{2024}{8}{8}{井上 研究室}
-\title{水温・振動提示によるフィードバック}
+\title{CirQuid Jacket：液体循環を用いたジャケット型触覚インターフェース}
 \author{C0B21019 井上 琳平 (Rimpei Inoue) }
 \endheader
 ]
@@ -23,7 +23,7 @@
 \vspace{3mm}
 
  % 本番用ページ番号オフセット
-\setcounter{page}{1}
+\setcounter{page}{27}
 
 %---------------------------------------------------------------------------
 % 本文
@@ -31,99 +31,101 @@
 
 
 \section{はじめに}
-ゲームや読書に熱中すると，いつの間にか数時間経っていることがある．
-この現象は物事に深く没入していると生じ，集中力の増加やストレス発散に繋がる．
-仮想空間内での没入体験も同様のメリットが存在する．
+VR体験の没入感向上には，現実に近い五感を再現する必要がある．
+視覚情報は最も多く研究されているが，人が何かに接触した感覚（以下，接触感覚）も同様に重要である．
+接触感覚の研究は，指先等の狭い範囲から，腕全体，上半身，全身まで様々な提示範囲を対象としている．
+本研究では，VRエンターテインメント分野への応用が期待される，広範囲への接触感覚の提示に着目した．
 
-VRの没入感向上には，接触感覚が重要である．VR体験中に
+接触感覚の提示手法として，空気圧\cite{ty1}やミスト\cite{ty2}を用いた研究がある．
+前者は，空気によって圧力と振動を提示しているため，液体が関係する事象の没入感が低かった．
+後者は，ミストによる温度情報と手首のモーターによる振動を提示しているので，圧力を感じることが出来ない．
+加えて，耐水性のない電子デバイスが濡れる可能性がある．
 
-海外の研究では
-没入感が低かったものの中でLight Rain，Heavy Rain，Slime Dripping on Backに着目すると，どれも液体であり，冷たい
+そこで本研究の目的は，仮想世界における液体が関連する事象に対し，耐水性を考慮しつつ接触・温度感覚を再現してユーザーの没入感を向上させることである．
+この目的を達成するため，液体循環を用いたジャケット型触覚インタフェースCirQuid Jacketを提案する．
+CirQuid Jacketは，その内側に液体を密閉可能な袋状のセル（以下，ウォーターバッグ）が複数張り巡らされている．
+このウォーターバッグに温度調整がされた液体を流入・排出すると，ウォーターバッグに接したユーザーの表皮に対して液体による温感と圧迫が提示される．
 
-
-空気で没入感があがった冷。
-再現度低いもので液体らしいものがあること
-
-
-
-
-
-
-VR体験での没入感向上の一環として，温度感覚に着目した研究がある．
-従来の温度を提示する手法ではペルチェ素子を用いられることが多い．
-ペルチェ素子は直流電流を流すと片面が加熱し，もう片面が冷却する．
-直流電流の向きを変えると加熱と冷却が切り替わる．
-直流電流を流すという簡単なプロセスで反応するため，手軽に使えることが利点である．
-しかし，ペルチェ素子は加熱と冷却の切り替えがスムーズに行われない．
-
-この問題を解決する温度提示手法として水がある．
-あらかじめ，温水と冷水が用意されており，電子弁で流水を制御できるので，高速で温度を切り替えることが出来る．
-また，接触感覚を伴わない温度の提示や，全身への温冷感の提示を可能としている．
-
+本研究の新規性は，媒体が液体なことである．
+液体が入ったウォーターバッグがユーザーの皮膚に接触すると，触覚と温度情報により，その部位が液体で濡れた感覚が再現できる．
+これまでの空気やミストを媒体としたシステムでは，この感覚を再現するのが難しかった．
+媒体の液体はウォーターバッグで密閉された中を循環するため，耐水性・防水性も維持されている．
 
 
 \section{関連研究}
-Yi-Ya Liaoらの研究では，水中にいる感覚を再現するLiquidMaskを開発した．
-LiquidMaskは，HMDとユーザーの間に置かれる触覚インターフェースである．
-ウォーターバッグに溜まった水が温度提示を行う．
-更に，LiquidMaskが微細に振動することで，大型の魚が布巾を通過した際の揺れを再現している．
-これによって，ユーザーはVR体験中の没入感が向上する．
+Delazioら\cite{ty1}は，ユーザーに空気圧と振動を用いて接触感覚を提示するForce Jacketを開発した．
+Force Jacketはジャケット型インターフェースで，内側に26個のエアバッグが搭載されている．
+仮想空間での事象に連動し，エアバッグが膨張，収縮，振動することで仮想空間の没入感を向上させる．
 
-Alexandraの研究では，様々な接触感覚を再現するForce Jacketを開発した．
-Force Jacketはには26個のエアバッグが装着されており，それぞれが独立して稼働する．
-エアバッグに空気が溜まり，ユーザーに圧力が提示される．
-更に、エアバッグに附随している振動モーターが振動を提示する．
-これによって，様々なイベントの再現が可能となり，VR体験の没入感が向上する．
-
+三浦ら\cite{ty2}は，手を水中に入れた際の感覚を再現する手法を提案した．
+提案手法では，振動による接触感覚を提示すると同時に，直接ミストを当てることで冷覚も提示する．
+実験では，水中に手を入れた際の感覚を10点とした場合，提案手法は平均で4.8点となった．
 
 \section{システム概要}
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.9\linewidth]{system.png}
+    \includegraphics[width=0.9\linewidth]{システム概要.png}
     \caption{システム概要}
     \label{fig:env}
 \end{figure}
-システム概要を図\ref{fig:env}に示す．冷水と温水が入ったタンクを1つずつ用意する．水はポンプで吸い上げられ，サーモスタット混合栓を通る．この時，冷水と温水の量が調整されることで，幅広い水温を実現する．混合した水はチューブを通り循環し，温度刺激を与える．今回の研究では，衣服にチューブを取り付けることで，接触感覚無しで温度情報を提示する．
-
+CirQuid Jacket（図\ref{fig:env}）は，液体の循環によって接触・温度感覚を提示するジャケット型触覚インターフェースである．
+本システムの特徴は，ポンプによって吸込・吐出された液体が循環することで，温度を一定に保ち，液体の流れによって振動を提示できることである．
+液体の循環は電子弁によって制御され，特定のウォーターバッグのみに液体を流入・排出する．
+液体の流入する勢いによって振動，ウォーターバッグの膨張・収縮によって圧力，ウォーターバッグ内の液体によって温度が提示される．
 
 \section{システム構成}
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.9\linewidth]{システム構成.png}
+    \includegraphics[width=0.9\linewidth]{システム構築.png}
     \caption{システム構成}
     \label{fig:sys}
 \end{figure}
-図\ref{fig:sys}はシステム構成である．仮想空間内の温度情報をコンピュータが保持している．まず，保持している温度情報がArduinoに伝えられる．そして，Arduinoがサーモスタット混合栓を動かし，温度の調整をする．最後に，温度を調整された水が温度刺激を行う．
-
+システム構成を図\ref{fig:sys}に示す．
+VR環境を構築するソフトウェアとしてUnityを用いる．
+仮想空間の情報をマイクロコンピュータに送る．
+その情報を基にポンプと電子弁を制御する．
+例として，仮想空間で雨が降っていると，その事象を再現するためにポンプの吸込・吐出の強さ，電子弁のON・OFFの情報が送られる．
 
 \section{評価方法}
 \begin{table}[H]
     \centering
-    \caption{アンケート項目}\label{tab:fuga}
+    \caption{評価する事象一覧}\label{tb:fuga}
     \begin{tabular}{c|c}\hline
-    番号 & 項目  \\ \hline
-    1 & 濡れた感覚があった  \\
-    2 & 痛みを感じた  \\
-    3 & 接触感覚があった  \\
-    4 & 温度の切り替わりが早かった  \\
-    5 & 全身に温冷感が生じた  \\
-    6 & どちらの手法で没入感がより向上した（春）  \\
-    7 & 以下同文（夏）  \\
-    8 & 以下同文（秋）  \\
-    9 & 以下同文（冬）  \\ \hline
+    液体が関連する事象 & その他の事象  \\ \hline
+    大雨を浴びる & バイクのバイブレーション  \\
+    小雨を浴びる & 筋肉質なアバターに変身  \\
+    スライムが背中を滴り落ちる & 大人とハグする  \\ \hline
     \end{tabular}
 \end{table}
-
-Unityの仮想空間で実験を行う．実験参加者は，春夏秋冬を再現した4つの空間で温度情報を提示される．この時，2通りの温度提示手法を使う．1つ目は，従来の温水，または冷水を用いた温度提示である．2つ目は私が提案した，それぞれの気温に合わせて水温を調整し，提示する手法である．実験終了後，アンケートを行う．
-
-\tabref{tab:fuga}はアンケートによる評価項目の一覧である．1番目は水を流した際の不快感の有無を確認している．2番目は温度提示の際にありがちな，痛覚が生じるかを確認している．3，4，5番目はどれも水を使った温度提示のメリットが再現されているかを確認している．6から9番目は仮想空間の温度提示において，上述したどちらの温度提示手法がより没入感を得られるかを確認している．
-
+液体が関連する事象を再現できているかの評価実験を行う．
+その際，その他の事象が本研究の触覚インターフェースでどう評価されるか確認する．
+表\ref{tb:fuga}は評価する事象の一覧である．
+本システムの比較として，空気によって接触感覚を提示する手法を用いる．
+実験参加者は最初にそれぞれの事象をHMDのみで体験してもらう．
+その後，本研究の手法，空気を用いた手法の2パターンで実験を行う．
+実験結果は0～5点で評価し，その平均値を求める．
 
 \section{検討事項}
-適切な仮想空間が作れるか
+本研究では，システムの開発に時間がかかることが懸念される．
+例として，評価する事象が多いため，UnityでのVR環境の構築に時間がかかる．
+加えて，実験では液体循環を用いたジャケット型触覚インターフェースと，空気圧を用いたジャケット型触覚インターフェースを作製する．
+
+液体を用いた研究なので，電子機器が濡れるなどの事態が起きる可能性がある．
+そのため，液体の取り扱いには十分に注意する必要がある．
+
+タンク内の液体の温度を一定に保つ必要がある．
+例として，簡単に温度を調整できる電子機器としてペルチェ素子がある．
 
 \section{まとめ}
-水を使った温度提示手法は，接触感がなく，全身に温冷感を伝えることが出来，高速で温度を切り替えれることを可能とした．この特性を消すことなく，更に多くの温度情報を伝えられる手法として，サーモスタット混合栓を使ったシステムを提案した．
+本研究の目的は，仮想世界における液体が関連する事象に対し，耐水性を考慮しつつ接触・温度感覚を再現してユーザーの没入感を向上させることである．
+目的を達成するために，液体循環を用いて液体による事象を再現するこができるジャケット型触覚インターフェースCirQuid Jacketを提案した．
+
+新規性は，液体を媒体にすることで，液体が関連する事象の没入感を向上させることである．
+加えて，ウォーターバッグ内に液体を流入・排出することで耐水性・防水性を維持しつつ，一定の温度，流出の勢いによる振動を提示できる．
+
+評価実験として，液体が関連する事象と，その他の事象を評価する．
+本研究で提案したCirQuid Jacketの比較として，空気圧を用いたジャケット型触覚インターフェースを使う．
+実験参加者は，それぞれの手法を評価し，その平均を結果とする．
 
 
 %---------------------------------------------------------------------------
